service_fastapi.yml
kind: Service
apiVersion: v1
metadata:
  name: cicd-fastapi-service
spec:
  selector:
    app: cicd
  type: NodePort
  ports:
    - port: 80
