ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-fastapi-service
                port:
                  number: 80
    - http:
        paths:
          - path: /database
            pathType: Prefix
            backend:
              service:
                name: cicd-postgres-service
                port:
                  number: 5432
